samples/_failures_safe/1761535734_d9f39c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_53b710cc.c: In function ‘main’:
./samples/SAFE/__tmp_53b710cc.c:164:20: error: expected ‘)’ at end of input
  164 |     if (fgets(input
      |              ~     ^
      |                    )
./samples/SAFE/__tmp_53b710cc.c:164:9: error: too few arguments to function ‘fgets’
  164 |     if (fgets(input
      |         ^~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_53b710cc.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:196:1: note: declared here
  196 | fgets (char *__restrict __s, int __n, FILE *__restrict __stream)
      | ^~~~~
./samples/SAFE/__tmp_53b710cc.c:164:5: error: expected declaration or statement at end of input
  164 |     if (fgets(input
      |     ^~
